@@ -1,4 +1,4 @@
-C:  1: Missing docstring
-C:  5:function1: Missing docstring
-C: 17:AAAA: Missing docstring
-C: 33:AAAA.method1: Missing docstring
+C:  1: Missing module docstring
+C:  5:function1: Missing function docstring
+C: 17:AAAA: Missing class docstring
+C: 33:AAAA.method1: Missing method docstring
