@@ -1,2 +1,2 @@
-C:  1: Missing docstring
+C:  1: Missing module docstring
 C:  1: Missing required attribute "__revision__"
